--- a/pointeur.html
+++ b/pointeur.html
@@ -10,6 +10,11 @@
 <body class="page-cours">
     <header>
         <nav>
+            <li>
+    <button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">
+        🌙 Mode Sombre
+    </button>
+</li>
             <ul>
                 <li><a href="index.html"><i class="fas fa-arrow-left"></i> Retour</a></li>
             </ul>
