--- a/internet.html
+++ b/internet.html
@@ -11,6 +11,11 @@
 
     <header>
         <nav>
+            <li>
+    <button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">
+        🌙 Mode Sombre
+    </button>
+</li>
             <ul>
                 <li><a href="index.html"><i class="fas fa-arrow-left"></i> Retour à l'accueil</a></li>
             </ul>
