--- a/word.html
+++ b/word.html
@@ -6,13 +6,42 @@
     <title>Cours Word - Écrire ses premiers textes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Styles pour le simulateur Word intégré */
+        .logiciel-word {
+            width: 100%; max-width: 800px; margin: 30px auto;
+            background: #f3f2f1; border: 2px solid #2b579a; border-radius: 5px; overflow: hidden;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+        }
+        .ruban-word {
+            background: white; border-bottom: 1px solid #ddd; padding: 10px;
+            display: flex; gap: 15px; align-items: center; justify-content: center;
+        }
+        .btn-word {
+            padding: 8px 15px; border: 1px solid #ddd; background: white; cursor: pointer; border-radius: 3px; font-family: serif;
+        }
+        .btn-word:hover { background: #ebebeb; }
+        .feuille-blanche {
+            width: 90%; max-width: 600px; height: 250px; background: white;
+            margin: 20px auto; box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            padding: 30px; outline: none; font-size: 1.2rem;
+            font-family: 'Segoe UI', Arial, sans-serif; line-height: 1.5;
+            overflow-y: auto; text-align: left;
+        }
+        .feuille-blanche:empty:before { content: "Cliquez ici pour écrire..."; color: #aaa; }
+    </style>
 </head>
 <body class="page-cours">
 
     <header>
         <nav>
-            <ul>
+            <ul style="display: flex; align-items: center; list-style: none; gap: 20px;">
                 <li><a href="index.html"><i class="fas fa-arrow-left"></i> Retour à l'accueil</a></li>
+                <li>
+                    <button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">
+                        🌙 Mode Sombre
+                    </button>
+                </li>
             </ul>
         </nav>
     </header>
@@ -23,9 +52,26 @@
             <p class="introduction">Word est votre papier et votre stylo numérique. On l'utilise pour faire des lettres, des listes ou des CV.</p>
         </section>
 
+        <section class="etape-cours" style="background: #e1eaf6; padding: 20px; border-radius: 10px;">
+            <h2><i class="fas fa-edit"></i> À vous d'essayer !</h2>
+            <p id="consigne-word" style="font-weight: bold; color: #2b579a; text-align: center;">
+                1. Cliquez dans la feuille blanche et écrivez "Bonjour".
+            </p>
+
+            <div class="logiciel-word">
+                <div class="ruban-word">
+                    <button class="btn-word" onclick="modifierTexte('bold')"><strong>G</strong></button>
+                    <button class="btn-word" onclick="modifierTexte('italic')"><i>I</i></button>
+                    <button class="btn-word" onclick="modifierTexte('underline')"><u>S</u></button>
+                    <button class="btn-word" onclick="modifierTexte('foreColor', 'red')"><i class="fas fa-font" style="color: red;"></i></button>
+                </div>
+                <div id="editeur" class="feuille-blanche" contenteditable="true"></div>
+            </div>
+        </section>
+
         <section class="etape-cours">
             <h2>1. Le Ruban (votre trousse à outils)</h2>
-            <p>Tout en haut de Word se trouve le <strong>Ruban</strong>. C'est là que vous choisirez vos outils comme on choisit un feutre ou un surligneur.</p>
+            <p>Tout en haut de Word se trouve le <strong>Ruban</strong>. C'est là que vous choisirez vos outils.</p>
             <ul>
                 <li><strong>G (Gras) :</strong> Pour écrire plus épais.</li>
                 <li><em>I (Italique) :</em> Pour pencher le texte.</li>
@@ -37,23 +83,64 @@
             <h2>2. Changer l'apparence</h2>
             <p>Vous pouvez modifier votre texte même après l'avoir écrit :</p>
             <div class="comparaison">
-                <p><i class="fas fa-font"></i> <strong>La Police :</strong> C'est le style d'écriture (élégant, moderne, classique).</p>
-                <p><i class="fas fa-text-height"></i> <strong>La Taille :</strong> Pour écrire en plus gros (idéal pour les titres).</p>
-                <p><i class="fas fa-palette"></i> <strong>La Couleur :</strong> Pour mettre de la vie dans vos documents.</p>
+                <p><i class="fas fa-font"></i> <strong>La Police :</strong> C'est le style d'écriture.</p>
+                <p><i class="fas fa-palette"></i> <strong>La Couleur :</strong> Pour mettre de la vie.</p>
             </div>
         </section>
 
         <section class="etape-cours">
             <h2>3. Ne pas perdre son travail</h2>
-            <p>L'étape la plus importante ! Il faut toujours <strong>Enregistrer</strong> votre document pour le retrouver demain.</p>
-            <p><i class="fas fa-save"></i> Allez dans <strong>Fichier > Enregistrer</strong> et donnez-lui un nom clair (ex: "Ma Lettre à la Mairie").</p>
+            <p><i class="fas fa-save"></i> Allez dans <strong>Fichier > Enregistrer</strong> pour ne pas perdre votre travail.</p>
         </section>
 
-        <div class="actions-cours">
-            <button class="btn-validation" onclick="validerCours('word')">J'ai terminé le cours Word !</button>
+        <section class="zone-telechargement">
+            <div class="card-pdf">
+                <i class="fas fa-file-pdf fa-3x" style="color: #e74c3c;"></i>
+                <div class="pdf-info">
+                    <h3>Fiche Mémo Word</h3>
+                    <p>Téléchargez le résumé du cours pour l'imprimer.</p>
+                </div>
+                <a href="pdf/cours-word.pdf" download class="btn-download">
+                    <i class="fas fa-download"></i> Télécharger (PDF)
+                </a>
+            </div>
+        </section>
+
+        <div class="actions-cours" style="text-align: center; margin-top: 30px;">
+            <button id="btn-valider-word" class="btn-validation" onclick="validerCours('word')" disabled 
+                style="opacity: 0.5; background-color: #2b579a; color: white; border: none; padding: 15px 30px; border-radius: 5px; cursor: not-allowed; font-weight: bold;">
+                J'ai terminé l'exercice et le cours !
+            </button>
         </div>
     </main>
 
+    <script>
+        const editeur = document.getElementById('editeur');
+        const consigne = document.getElementById('consigne-word');
+        const btnValider = document.getElementById('btn-valider-word');
+        let texteSaisi = false;
+
+        editeur.addEventListener('input', () => {
+            const texte = editeur.innerText.trim();
+            if (texte.length >= 3 && !texteSaisi) {
+                texteSaisi = true;
+                consigne.innerHTML = "2. Maintenant, <strong>sélectionnez le texte</strong> et cliquez sur le <strong>G</strong>.";
+                consigne.style.color = "#2b579a";
+            }
+        });
+
+        function modifierTexte(commande, valeur = null) {
+            document.execCommand(commande, false, valeur);
+            editeur.focus();
+            if (texteSaisi) {
+                consigne.innerHTML = "✅ Parfait ! Vous pouvez valider le cours et télécharger votre fiche.";
+                consigne.style.color = "#27ae60";
+                btnValider.disabled = false;
+                btnValider.style.opacity = "1";
+                btnValider.style.cursor = "pointer";
+            }
+        }
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
