--- a/word.html
+++ b/word.html
@@ -100,7 +100,7 @@
                     <h3>Fiche Mémo Word</h3>
                     <p>Téléchargez le résumé du cours pour l'imprimer.</p>
                 </div>
-                <a href="pdf/cours-word.pdf" download class="btn-download">
+                <a href="pdf/cours-clavier.pdf" download class="btn-download">
                     <i class="fas fa-download"></i> Télécharger (PDF)
                 </a>
             </div>
