--- a/bureau.html
+++ b/bureau.html
@@ -74,11 +74,11 @@
             </div>
         </div>
 
-        <div style="text-align: center;">
-            <button id="btn-valider-bureau" class="btn-cours" onclick="validerCours('bureau')" disabled style="opacity:0.5;">
-                C'est tout propre !
-            </button>
-        </div>
+        <div style="text-align: center; margin-top: 30px; margin-bottom: 50px;">
+    <button id="btn-valider-bureau" class="btn-cours" onclick="validerCours('bureau')" disabled>
+        <i class="fas fa-check-circle"></i> C'est tout propre !
+    </button>
+</div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
