--- a/informatique.html
+++ b/informatique.html
@@ -8,19 +8,13 @@
 </head>
 <body class="page-cours">
     <header>
-        <nav><ul><li><a href="index.html"><i class="fas fa-arrow-left"></i> Retour</a></li></ul></nav>
-        <nav>
-    <ul style="display: flex; align-items: center; list-style: none; gap: 20px; padding: 10px;">
-        <li><a href="index.html" style="text-decoration: none; color: inherit;"><i class="fas fa-arrow-left"></i> Retour</a></li>
-        
-        <li>
-            <button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon" style="cursor: pointer;">
-                🌙 Mode Sombre
-            </button>
-        </li>
-    </ul>
-</nav>
-    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html"><i class="fas fa-arrow-left"></i> Retour</a></li>
+            <li><button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">🌙 Mode Sombre</button></li>
+        </ul>
+    </nav>
+</header>
 
     <main class="contenu-cours">
         <section class="entete-cours">
