--- a/explorateur.html
+++ b/explorateur.html
@@ -9,8 +9,15 @@
 <body class="page-cours">
     <header>
         <nav>
-            <ul style="display: flex; align-items: center; list-style: none; gap: 20px; padding: 10px;">
-                <li><a href="index.html" style="text-decoration: none; color: inherit;"><i class="fas fa-arrow-left"></i> Retour Accueil</a></li>
+            <ul>
+                <li><a href="#accueil"><i class="fas fa-home"></i> Accueil</a></li>
+                <li><a href="#services"><i class="fas fa-graduation-cap"></i> Cours</a></li>
+                <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+   <li>
+    <button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">
+        🌙 Mode Sombre
+    </button>
+</li>
             </ul>
         </nav>
     </header>
