--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
         </div>
     </section>
 
-    <footer style="text-align: center; padding: 40px; background: #2c3e50; color: white; margin-top: 50px;">
-        <p>&copy; 2026 Bernard TELLIER - Tous droits réservés.</p>
-    </footer>
+   <footer>
+    <p>&copy; 2026 Bernard TELLIER - Tous droits réservés.</p>
+</footer>
 
     <script src="script.js"></script>
 </body>
