--- a/informatique.html
+++ b/informatique.html
@@ -11,7 +11,11 @@
     <nav>
         <ul>
             <li><a href="index.html"><i class="fas fa-arrow-left"></i> Retour</a></li>
-            <li><button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">🌙 Mode Sombre</button></li>
+            <li>
+                <button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">
+                    🌙 Mode Sombre
+                </button>
+            </li>
         </ul>
     </nav>
 </header>
@@ -107,6 +111,10 @@
             }
         }
     </script>
+
+<footer>
+    <p>&copy; 2026 Bernard TELLIER - Tous droits réservés.</p>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
