--- a/internet.html
+++ b/internet.html
@@ -9,18 +9,18 @@
 </head>
 <body class="page-cours">
 
-    <header>
-        <nav>
+   <header>
+    <nav>
+        <ul>
+            <li><a href="index.html"><i class="fas fa-arrow-left"></i> Retour</a></li>
             <li>
-    <button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">
-        🌙 Mode Sombre
-    </button>
-</li>
-            <ul>
-                <li><a href="index.html"><i class="fas fa-arrow-left"></i> Retour à l'accueil</a></li>
-            </ul>
-        </nav>
-    </header>
+                <button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">
+                    🌙 Mode Sombre
+                </button>
+            </li>
+        </ul>
+    </nav>
+</header>
 
     <main class="contenu-cours">
         <section class="entete-cours">
@@ -59,6 +59,10 @@
             <button class="btn-validation" onclick="validerCours('internet')">J'ai terminé la leçon Internet !</button>
         </div>
     </main>
+
+<footer>
+    <p>&copy; 2026 Bernard TELLIER - Tous droits réservés.</p>
+</footer>
 
     <script src="script.js"></script>
 </body>
