--- a/word.html
+++ b/word.html
@@ -50,18 +50,18 @@
 </head>
 <body class="page-cours">
 
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html"><i class="fas fa-arrow-left"></i> Retour</a></li>
-                <li>
-                    <button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">
-                        🌙 Mode Sombre
-                    </button>
-                </li>
-            </ul>
-        </nav>
-    </header>
+   <header>
+    <nav>
+        <ul>
+            <li><a href="index.html"><i class="fas fa-arrow-left"></i> Retour</a></li>
+            <li>
+                <button onclick="toggleModeSombre()" class="btn-dark-toggle" id="theme-icon">
+                    🌙 Mode Sombre
+                </button>
+            </li>
+        </ul>
+    </nav>
+</header>
 
     <main class="contenu-cours">
         <section class="entete-cours">
@@ -130,6 +130,11 @@
             }
         }
     </script>
+
+<footer>
+    <p>&copy; 2026 Bernard TELLIER - Tous droits réservés.</p>
+</footer>
+
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
 </body>
